ai-services/ollama-fast/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-fast
  namespace: ollama
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ollama-fast
  # Only run one at once, mostly because it's memory hungry. We can take an outage at home.
  replicas: 1
  revisionHistoryLimit: 3
  # During deployments, don't start another before the first is terminated.
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ollama-fast
    spec:
      # Switch to the nvidia runtime class to get access to the GPU
      runtimeClassName: nvidia
      # Run on 4090 GPU node
      nodeName: crobputer
      containers:
      - name: ollama
        # renovate: datasource=github-tags depname=ollama/ollama versioning=semver
        image: ollama/ollama:0.12.10
        resources:
          limits:
            nvidia.com/gpu: '1'
        ports:
        - name: ollama
          containerPort: 11434
        volumeMounts:
        - name: storage
          # Models are downloaded and stored in the root home directory
          mountPath: /root/.ollama
        # Full inspiration from https://github.com/otwld/ollama-helm/blob/main/templates/deployment.yaml#L140-L150
        # I just didn't want to run the helm chart...
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c
                - | 
                  while ! /bin/ollama ps > /dev/null 2>&1; do
                    sleep 5
                  done
                  /bin/ollama pull qwen3:14b
                  /bin/ollama pull qewn3:8b
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: ollama-fast-nfs-pvc
